--- a/blog.html
+++ b/blog.html
@@ -4,16 +4,72 @@
         <meta charset="utf-8">
         <title>blog</title>
         <style media="screen">
-
+            .write {
+                position: absolute;
+                top: 20px;
+                left: 20%;
+                width: 600px;
+            }
+            .write_title {
+                height: 35px;
+                font-size: 15px;
+            }
+            .write_input {
+                height: 150px;
+                font-size: 15px;
+            }
+            .write_button {
+                width: 100px;
+                min-height: 20px;
+                /* display: block; */
+                background-color: #4a77d4;
+                border: 1px solid #3762bc;
+                color: #fff;
+                padding: 9px 14px;
+                font-size: 15px;
+                line-height: normal;
+                border-radius: 5px;
+                /* margin: 0; */
+                margin-left: 650px;
+                box-shadow: 0 9px #999;
+            }
+            .write_button:hover {
+                background-color: #3A5FCD;
+            }
+            .write_button:active {
+                background-color: #3A5FCD;
+                box-shadow: 0 9px #666;
+                transform: translateY(4px);
+            }
+            hr {
+                position: absolute;
+                top: 500px;
+            }
+            .list {
+                position: absolute;
+                left: 50px;
+                top: 300px;
+            }
         </style>
         <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
         <script type="text/javascript">
-
+            function write_function() {
+                location.reload();
+            }
         </script>
     </head>
     <body>
+        <div class="write">
+            <textarea name="name" rows="8" cols="80" class="write_title" placeholder="博客标题"></textarea>
+            <textarea name="name" rows="8" cols="80" class="write_input" placeholder="写点什么吧......"></textarea>
+            <button type="button" name="button" onclick="write_function()" class="write_button">发送</button>
+        </div>
+        <hr/>
         <div class="list">
+            <h2>我的博客</h2>
+            <ul class="blog_title">
 
+            </ul>
         </div>
         <div class="essay">
 
